# Gemma3n_trial

./: README.md  pyproject.toml
pipelines/: streamlit_pipeline.py  streamlit_pipeline_memory.py  test_trial_main_pipeline.py
src/gemma3n_trial/: __init__.py
src/gemma3n_trial/agents/: __init__.py  cooking_agent.py  interface_agent.py  llm_agent.py  recipe_agent.py  search_agent.py
src/gemma3n_trial/schema/: __init__.py  interface_agent_schema.py  llm_agent_output.py  recipe_agent_schema.py  search_agent_output.py
test_pipelines/: cli_pipeline.py  main_pipeline.py  test_llm_search.py  test_llm_search_interface.py  test_llm_search_interface_recipe.py
tests/: test_cooking_agent.py  test_interface_agent.py  test_llm_agent.py  test_recipe_agent.py  test_search_agent.py
